<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.osamahqawasmeh.eatit.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/et_MobileNum"
            android:hint="@string/mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:text="0795672123"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:inputType="phone"
            />

        <EditText
            android:id="@+id/et_Password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:text="******"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_SignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_alignParentBottom="true"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:layout_weight="1"
        android:background="@color/btnSignUpActive"
        />


</RelativeLayout>
