<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    tools:context="com.example.osamahqawasmeh.eatit.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/eatItLogo"
            app:srcCompat="@drawable/logo_eat_it"
            android:layout_width="200dp"
            android:layout_height="200dp" />

        <TextView
            android:gravity="center"
            android:id="@+id/tv_Slogan"
            android:text="@string/slogan"
            android:textColor="@android:color/white"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_SignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/btnSignUp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_SignIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:background="@color/btnSignUpActive"
            />

    </LinearLayout>
</RelativeLayout>